--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon --watch server & webpack --watch",
     "devtest": "jest && nodemon --watch server & webpack --watch",
     "start": "node server/index",
+    "startsocket": "babel-node server/index",
     "test": "jest",
     "watch": "nodemon -e js,jsx -x npm test",
     "h:deploy": "git push heroku master",
@@ -40,6 +41,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
@@ -66,6 +68,7 @@
     "react-youtube": "^7.5.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "socket.io": "^2.0.4",
     "superagent": "^2.2.0",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
