--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "presets": [
       "es2015",
       "react",
-      "stage-0"
+      "stage-0",
+      "env"
     ]
   },
   "jest": {
@@ -44,6 +45,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
